[package]
name = "rusttone"
version = "0.1.0"
edition = "2024"

[dependencies]
hound = "3.5.0"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.7", features = ["multipart"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.7", features = ["limit"] }

[[bin]]
name = "rusttone"
path = "src/main.rs"

[[bin]]
name = "rusttone-server"
path = "src/bin/server.rs"
